Fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ html {
     cursor: pointer;
     border: none;
     text-align: center;
+    appearance: none;
 }
 
 .btn:hover {
